--- a/web/app/package.json
+++ b/web/app/package.json
@@ -1,36 +1,45 @@
 {
   "name": "flexpool-solo",
-  "version": "0.0.0",
-  "description": "Flexpool Solo - A lightweight SOLO Ethereum mining pool",
-  "main": "index.js",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "build": "webpack",
-    "dev": "webpack-dev-server",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
   },
-  "keywords": [],
-  "author": "Flexpool",
-  "license": "AGPL-3.0",
   "dependencies": {
-    "@babel/core": "^7.10.5",
-    "@babel/preset-env": "^7.10.4",
-    "@popperjs/core": "^2.4.4",
-    "babel-loader": "^8.1.0",
-    "bootstrap": "^4.5.0",
-    "css-loader": "^3.6.0",
-    "file-loader": "^6.0.0",
-    "html-loader": "^1.1.0",
-    "html-webpack-plugin": "^4.3.0",
+    "core-js": "^3.6.5",
     "jquery": "^3.5.1",
-    "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.1",
-    "popper.js": "^1.16.1",
     "sass-loader": "^9.0.2",
-    "style-loader": "^1.2.1",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12"
+    "vue": "^2.6.11"
   },
   "devDependencies": {
-    "webpack-dev-server": "^3.11.0"
-  }
+    "@vue/cli-plugin-babel": "~4.4.0",
+    "@vue/cli-plugin-eslint": "~4.4.0",
+    "@vue/cli-service": "~4.4.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^6.2.2",
+    "vue-template-compiler": "^2.6.11"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended"
+    ],
+    "parserOptions": {
+      "parser": "babel-eslint"
+    },
+    "rules": {}
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead"
+  ]
 }
