--- a/web/app/package.json
+++ b/web/app/package.json
@@ -8,9 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^4.5.0",
     "core-js": "^3.6.5",
+    "hamburgers": "^1.1.3",
     "jquery": "^3.5.1",
     "node-sass": "^4.14.1",
+    "popper.js": "^1.16.1",
     "sass-loader": "^9.0.2",
     "vue": "^2.6.11"
   },
