--- a/web/app/package.json
+++ b/web/app/package.json
@@ -11,6 +11,8 @@
     "bootstrap": "^4.5.0",
     "core-js": "^3.6.5",
     "hamburgers": "^1.1.3",
+    "highcharts": "^8.1.2",
+    "highcharts-vue": "^1.3.5",
     "jquery": "^3.5.1",
     "node-sass": "^4.14.1",
     "popper.js": "^1.16.1",
