--- a/web/app/package.json
+++ b/web/app/package.json
@@ -13,6 +13,7 @@
     "hamburgers": "^1.1.3",
     "highcharts": "^8.1.2",
     "highcharts-vue": "^1.3.5",
+    "humanize-duration": "^3.23.1",
     "jquery": "^3.5.1",
     "node-sass": "^4.14.1",
     "popper.js": "^1.16.1",
